added fragment navigation component

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,12 @@
         android:layout_height="match_parent"
         tools:context=".presentation.main.MainActivity">
 
-    <FrameLayout
-            android:id="@+id/frame_main"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-    </FrameLayout>
+    <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/mainNavHost"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:navGraph="@navigation/main_navigation_graph"
+            app:defaultNavHost="true"/>
 
 </android.support.constraint.ConstraintLayout>
