--- a/app/src/main/res/layout/fragment_adding.xml
+++ b/app/src/main/res/layout/fragment_adding.xml
@@ -4,6 +4,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         tools:context="com.saba.sample_mvvm.presentation.add.AddingFragment">
 
     <TextView
@@ -25,7 +27,8 @@
             app:layout_constraintBottom_toBottomOf="@+id/butSearch"
             app:layout_constraintEnd_toStartOf="@+id/butSearch"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="Autofill"/>
 
     <Button
             android:id="@+id/butSearch"
