--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -14,9 +14,7 @@
 
         <action
                 android:id="@+id/action_addingFragment_to_resultFragment"
-                app:destination="@id/resultFragment"
-                app:popUpTo="@id/resultFragment"
-                app:popUpToInclusive="true"/>
+                app:destination="@id/resultFragment"/>
 
     </fragment>
 
