--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.saba.sample_mvvm.presentation.get.ResultFragment">
+        tools:context="com.saba.sampleMVVM.presentation.get.ResultFragment">
 
     <TextView
             android:id="@+id/tv_result_error"
